# pathgrapher

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml  settings.ini
pathgrapher/: __main__.py  gui.py  scanner.py
